<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SmsApp</string>
    <string name="action_settings">Settings</string>
    <string name="car">Characters: 0/160</string>
    <string name="car1">Characters: </string>
    <string name="car2">/160</string>
    <string name="carDb">Load Messages</string>
    <string name="caricaDb">Load all messages</string>
    <string name="def_text">Message sent using SmsApp!</string>
    <string name="def_text_2">http://smsapp.altervista.org/</string>
    <string name="eliminaDb">Error while loading contacts</string>
    <string name="exit">Are you sure you want to exit?</string>
    <string name="inviato">Sent!</string>
    <string name="listDetail">List messages</string>
    <string name="lista">Reload list</string>
    <string name="local_service_started">Running</string>
    <string name="no">Cancel</string>
    <string name="non_inviato">Not sent!</string>
    <string name="numero">Number:</string>
    <string name="nuoviDb">New messages</string>
    <string name="plane">Not sent! Airplane mode active</string>
    <string name="plane_sub">Airplane mode active!</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_new_message_notifications">Ring</string>
    <string name="pref_title_ringtone">Ring name</string>
    <string name="pref_title_vibrate">Vibration</string>
    <string name="si">Yes</string>
    <string name="sms_a">Sms to:</string>
    <string name="snak1">The message will be sent at</string>
    <string name="snak2">of</string>
    <string name="testo">Text</string>
    <string name="title1">SMS</string>
    <string name="title2">Contacts</string>
    <string name="title_activity_contact_detail">Number</string>
    <string name="title_activity_database">Database</string>
    <string name="title_activity_service">Service</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_messaggi">Sms</string>
    <string name="no_messaggi">No messages</string>
    <string name="no_messaggi_detail">No messages yet posted</string>
    <string name="numero_caricato">Number loaded</string>
    <string name="testo_numero">Text and number loaded</string>
    <string name="errore_caricamento">Error while loading contacts</string>
    <string name="no_contatti">There is no contacts</string>
    <string name="permessi1">Accept permissions</string>
    <string name="permessi2">Waiting permissions</string>
    <string name="head_settings_notification">Sound and Vibration</string>
    <string name="sub_settings_notification">Here you can set sound and vibration</string>
    <string name="menu_messaggi">Pending messages</string>
    <string name="scritta">By double-clicking on the text you will be able to delete your scheduled message send</string>
    <string name="ripremi">Repeat to delete</string>
    <string name="placeholder">Write name</string>
    <string name="caricata">List loaded</string>
    <string name="verranno_inviati">You have some messages that will be sent!</string>
    <string name="n_sms">N. sms:</string>
    <string name="main1">Choose the hour when the message have to be sent</string>
    <string name="main2">And the date</string>
    <string name="main3">If you want to send the message now just insert </string>
    <string name="testo_caricato">Text loaded</string>
    <string name="number">the number</string>
    <string name="and">and </string>
    <string name="text">the text</string>
    <string name="copia_numero">Copy number</string>
    <string name="copia_testo">Copy text</string>
    <string name="copia_testo_numero">Copy numebr and text</string>
    <string name="title_activity_modify">ModifyActivity</string>
    <string name="sim_err">Sim error!</string>
    <string name="title_activity_detail">Detail</string>
</resources>
