<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_database"
    tools:context="baxxo.matteo.smsapp.DisplayDatabase">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/button_db"
            android:text="@string/caricaDb"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="199dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_db"
            android:text="@string/carDb"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/button5"
            android:layout_below="@+id/button5"
            android:layout_marginTop="22dp"
            android:background="@drawable/button_db"
            android:text="@string/nuoviDb"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/button4"
            android:layout_alignBottom="@+id/button4"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_db"
            android:text="@string/eliminaDb"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
